--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <ul>
     <li>Debug Ruby Labs</li>
-    <li>Massage Joe's Back</ul>
+    <li>Massage Joe's Back</li>
     <li>Archive Steph's Gif collection</ul>
-    <ul>Take out trash</ul>
+    <li>Take out trash</ul>
   </li>
 
   <h2> Issue Bot Camera Capture Archive</h2>
